--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
 BOT_TOKEN=5900854640:AAFBkM3iVNTqk78MaiBLt4XDyNtuvOX8WM4
+POSTGRES_DB=pyro_db
+POSTGRES_USERNAME=gto85
+POSTGRES_PASSW=gto85
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DIALECT=postgres
