--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,20 @@ POSTGRES_PASSW=gto85
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DIALECT=postgres
+
+CODE_ACCESS='TEST'    # код по которому можно будет давать доступ в итоге код получится TESTГОД-МЕСЯЦ-ЧИСЛО (TEST2020-01-01)
+
+BOT_LOGIN='p2p24_bot'
+
+ADMIN_ID=573129700# id админа
+
+QIWI_NUMBER='+79131736785'    # номер киви
+QIWI_TOKEN='27cd2dce7ce810621e45a36ad12f9c8a'     # токен киви
+
+ACCESS_COST=200# стоимость доступа
+MIN_PAYOUT=500# минимальная сумма для запроса на вывод денег
+
+PERCENT_ADMIN=0.25# сколько процентов от стоимости доступа пойдёт вам(0.25 от 200 рублей это 50 руб)
+PERCENT_1=0.375# сколько пойдёт пригл. пользователя (0.375 от 200 руб это 75 руб)
+PERCENT_2=0.225# сколько пойдёт 2 лвл пользователя (0.225 от 200 руб это 45 руб)
+PERCENT_3=0.15# сколько пойдёт 3 лвл пользователя (0.15 от 200 руб это 30 руб)
