--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-and-time": "^3.1.1",
     "dotenv": "^16.3.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
+    "random": "^4.1.0",
     "sequelize": "^6.35.2",
-    "telegraf": "^4.15.3"
+    "telegraf": "^4.15.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
